crates/aion-awl/tests/fixtures/rev2/declarations/invalid/duplicate_action_name.awl
//! The same action name declared twice on one worker.
workflow notify_once
  input message: String
  outcome sent: type Receipt, route success

type Receipt { id: String, accepted: Bool }

worker notifier
  action send_message(message: String) -> Receipt
  action send_message(message: String) -> Receipt

step send
  message |> send_message |> route sent
